# Introduction-to-ROS2

rpros2_assignments/rpros2_week2_assignment/: setup.py
rpros2_assignments/rpros2_week2_assignment/config/: wheel2robot_service_params.yaml
rpros2_assignments/rpros2_week2_assignment/rpros2_week2_assignment/: wheel2robot_velocity_client.py  wheel2robot_velocity_server.py
rpros2_interfaces/: CMakeLists.txt  package.xml
rpros2_interfaces/srv/: Wheel2RobotVelocity.srv
